# WinHiderTCP

Client/: CMakeLists.txt  CMakeLists1.txt  main.cpp  main1.cpp
Client/inc/hider/: win_work.h
Client/inc/panels/: bind_panel.h  com_panel.h  main_panel.h  main_window_with_tray.h
Client/inc/tcp/: tcp_obj.h
Client/src/hider/: token.cpp  win_work.cpp
Client/src/misc/: file_work.cpp
Client/src/panels/: bind_panel.cpp  com_panel.cpp  main_panel.cpp  main_window_with_tray.cpp
Client/src/tcp/: tcp_exchanger.cpp  tcp_obj.cpp
Server/: CMakeLists.txt  main.cpp
Server/inc/: tcp_exchanger.h  tcp_obj.h  thread_builder.h  token.h  updater.h  win_work.h
Server/inc/hider/: token.h  win_work.h
Server/inc/misc/: file_work.h  thread_builder.h  token.h  updater.h
Server/inc/panels/: com_panel.h  main_panel.h  main_window_with_tray.h
Server/inc/tcp/: tcp_exchanger.h  tcp_obj.h
Server/src/: file_work.cpp  tcp_exchanger.cpp  tcp_obj.cpp  thread_builder.cpp  token.cpp  updater.cpp  win_work.cpp
Server/src/hider/: token.cpp  win_work.cpp
Server/src/misc/: token.cpp  updater.cpp
Server/src/panels/: com_panel.cpp  main_panel.cpp  main_window_with_tray.cpp
Server/src/tcp/: tcp_exchanger.cpp  tcp_obj.cpp
qt_settings/: hint.txt
qt_settings/MSVC/: hint.txt
qt_settings/MinGW/: hint.txt
